# Pricing_demo

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  ui_components.py
.claude/: launch.json
.streamlit/: config.toml
docs/: approval-policy.md  architecture.md  conversational-follow-ups-plan.md  conversational-follow-ups-results.md  conversational-result-exploration-plan.md  conversational-result-exploration-results.md  cross-workflow-intent-switching-plan.md  cross-workflow-intent-switching-results.md  dealer-friendly-language-plan.md  dealer-friendly-language-results.md  dealer-workflow-implementation-plan.md  demo-script.md  deterministic-agent-routing-results.md  fail-safe-policy.md  forecast-definitions.md  improve-aging-count-reconciliation-plan.md  improve-aging-count-reconciliation-results.md  improve-aging-demo-polish-plan.md  improve-aging-demo-polish-results.md  improve-aging-orchestration-plan.md  improve-aging-orchestration-results.md  navigation-spike-results.md  open-questions.md  portfolio-forecast-methodology.md  product-spec.md  promotion-optimization-methodology.md  readme-audience-and-content-review.md  valuation-methodology.md  vauto-mcp-contract.md  view-extraction-results.md  workflow-copy-alignment-results.md  workflow-navigation-results.md
mocks/: README.md
pages/: 1_Vehicle_Detail.py  2_Promotion.py
schemas/: audit-metadata.schema.json  break-even-analysis.schema.json  common-types.schema.json  common-vehicle.schema.json  depreciation-forecast.schema.json  inventory-portfolio-request.schema.json  warning.schema.json  (+11 more)
(+121 files in other folders)
